# src/main/java/com/example/todolist/entities/User.java
@@ -2,10 +2,15 @@ package com.example.todolist.entities;
 
 import jakarta.persistence.*;
 import lombok.AllArgsConstructor;
+import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
 
 @Entity
@@ -13,7 +18,8 @@ import java.util.List;
 @Data
 @NoArgsConstructor
 @AllArgsConstructor
-public class User {
+@Builder
+public class User implements UserDetails {
     @Id
     @Column(name="id")
     @GeneratedValue(strategy = GenerationType.SEQUENCE, generator = "user_generator")
@@ -21,8 +27,14 @@ public class User {
     private Long id;
     @Column(name="name")
     private String name;
+    @Column(name="email")
+    private String email;
+    @Column(name="password")
+    private String password;
     @OneToMany(mappedBy = "user", cascade = CascadeType.ALL)
     List<Task> tasks;
+    @Enumerated(EnumType.STRING)
+    private Role role;
 
     public User(String name) {
         this.name = name;
@@ -35,4 +47,35 @@ public class User {
             tasks.add(task);
         }
     }
+
+    @Override
+    public Collection<? extends GrantedAuthority> getAuthorities() {
+        return List.of(new SimpleGrantedAuthority(role.name()));
+    }
+
+    @Override
+    public String getUsername() {
+        return email;
+    }
+
+    @Override
+    public boolean isAccountNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isAccountNonLocked() {
+        return true;
+    }
+
+    @Override
+    public boolean isCredentialsNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isEnabled() {
+        return true;
+    }
+
 }
